1.1.5
- Updated language files from Transifex (thanks to alanwww1).
- Fix enconding bug in show warning messages.
- Added website tag to addon.xml file.
1.1.4
- Added info to videos with published date, summary, year, and genre.
- Added Search option for videos.
- Improved navigation through video lists.
- Show thumbnails as fanart option from Settings.
- Updated language tag with all the languages supported from the web sites.
- Code refactoring.
1.1.3
- Support more than 40 sites. Almost all the sites with video content are supported.
- Refactoring and code cleaning.
- First official Frodo release.
1.1.2
- Quick fix for default settings on first run.
1.1.1
- Added Add-on optional tags and forum support thread.
1.1.0
- First Frodo release.
0.0.9
- Added internationalization. More than 22 sites suported.
0.0.1
- First Try.