@@ -1,9 +1,0 @@
-<?xml version="1.0" encoding="utf-8" standalone="yes"?>
-<strings>
-  <string id="30010">Next Page</string>
-  <string id="30011">Video type not supported</string>
-  <string id="30012">Couldn't locate video url</string>
-  <string id="30101">Location/Language (for videos)</string>
-  <string id="30102">Debug (enable logs)</string>
-  <string id="30103">Show thumbnails as fanart</string>
-</strings>
